ran dos2unix on all .h and .cxx files. there was getting to be a build up of carriage returns in the code from improper commits off win32. i added the initial code for cfdGraphicsObjects. this class is to control the creation of geodes from and actor and the addition of the geode to the graph. it is also to control the scenegraph manipulation for trans and and texture based viz.

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -135,6 +135,7 @@ SRCS=\
    cfdFileInfo.cxx \
    cfdFrame.cxx \
    cfdGeode.cxx \
+   cfdGraphicsObject.cxx \
    cfdGroup.cxx \
    cfdImage.cxx \
    cfdIsosurface.cxx \
