--- a/futuregen/Plugin/OPPD/OPPD.vcproj
+++ b/futuregen/Plugin/OPPD/OPPD.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(XERCESCROOT)\src&quot;;&quot;$(WX_ROOT)\include&quot;;&quot;$(VE_SUITE_HOME)\futuregen\Plugin&quot;;&quot;$(WX_ROOT)\include\wx\msw&quot;"
+				AdditionalIncludeDirectories="&quot;$(XERCESCROOT)\src&quot;;&quot;$(WX_ROOT)\include&quot;;&quot;$(VE_SUITE_HOME)\futuregen\Plugin&quot;;&quot;$(WX_ROOT)\include\wx\msw&quot;;&quot;$(WX_ROOT)\lib\msw&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WXMAKING_PLUGIN_DLL;_USRDLL;WINDLL_EXPORTS;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -124,6 +124,9 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
+				RelativePath="..\FinancialDialog.cpp">
+			</File>
+			<File
 				RelativePath="..\interface.cpp">
 			</File>
 			<File
@@ -167,6 +170,9 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			<File
+				RelativePath="..\FinancialDialog.h">
+			</File>
 			<File
 				RelativePath="..\interface.h">
 			</File>
