adds VE_Conductor/skel as a place to search for include files

--- a/futuregen/Executive/WinServer.vcproj
+++ b/futuregen/Executive/WinServer.vcproj
@@ -79,7 +79,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;..\IDL;..\Plugin"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\skel&quot;;..\IDL;..\Plugin"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -220,64 +220,13 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\IDL\moduleC.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
+				RelativePath="..\..\VE_Conductor\skel\moduleC.cpp">
 			</File>
 			<File
-				RelativePath="..\IDL\moduleS.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
+				RelativePath="..\..\VE_Conductor\skel\moduleS.cpp">
 			</File>
 			<File
-				RelativePath="..\IDL\moduleS_T.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
+				RelativePath="..\..\VE_Conductor\skel\moduleS_T.cpp">
 			</File>
 			<File
 				RelativePath="Network_Exec.cpp">
@@ -373,13 +322,13 @@
 				RelativePath="..\Plugin\interface.h">
 			</File>
 			<File
-				RelativePath="..\IDL\moduleC.h">
+				RelativePath="..\..\VE_Conductor\skel\moduleC.h">
 			</File>
 			<File
-				RelativePath="..\IDL\moduleS.h">
+				RelativePath="..\..\VE_Conductor\skel\moduleS.h">
 			</File>
 			<File
-				RelativePath="..\IDL\moduleS_T.h">
+				RelativePath="..\..\VE_Conductor\skel\moduleS_T.h">
 			</File>
 			<File
 				RelativePath="Network_Exec.h">
