--- a/futuregen/Plugin/OPPD/OPPD.vcproj
+++ b/futuregen/Plugin/OPPD/OPPD.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(XERCESCROOT)\src&quot;;&quot;$(WX_ROOT)\include&quot;;&quot;$(VE_SUITE_HOME)\futuregen\Plugin&quot;;&quot;$(WX_ROOT)\include\wx\msw&quot;;&quot;$(WX_ROOT)\lib\msw&quot;"
+				AdditionalIncludeDirectories="&quot;$(XERCESCROOT)\src&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(VE_SUITE_HOME)\futuregen\Plugin&quot;;&quot;$(WX_HOME)\include\wx\msw&quot;;&quot;$(WX_HOME)\lib\msw&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WXMAKING_PLUGIN_DLL;_USRDLL;WINDLL_EXPORTS;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -41,7 +41,7 @@
 				OutputFile="..\OPPD.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(XERCESCROOT)\Build\Win32\VC7\Release&quot;;&quot;$(WX_ROOT)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(XERCESCROOT)\Build\Win32\VC7\Release&quot;;&quot;$(WX_HOME)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/OPPD.pdb"
 				SubSystem="2"
