--- a/VE_Models/OPPDModel/Makefile
+++ b/VE_Models/OPPDModel/Makefile
@@ -118,13 +118,17 @@ include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
 DEBUG_APP?=		TRUE
 #OPTIM_APP?=		TRUE
 
-# vtkActorToPF needs VTK4
-EXTRA_CXXFLAGS+=	$(WX_CXX) -DWXUSING_PLUGIN_DLL -D_PERFORMER -DVTK4 -m32 -DWXUSINGDLL=1
-#$(EXTRA_FLAGS) 
+EXTRA_CXXFLAGS+=	$(WX_CXX) -DWXUSING_PLUGIN_DLL -D_PERFORMER -DWXUSINGDLL=1
+
+# 64-bit linux needs these flags
+ifeq (${CFDUNAME},Linux)
+   EXTRA_CXXFLAGS+= -m32
+   EXTRA_LIBS+= -m32
+endif
 
 EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS} -I${VE_SUITE_HOME}/VE_SceneGraph
 #EXTRA_CXXFLAGS+= -I$(BOOST_INCLUDES)
-EXTRA_LIBS+= -shared ${ACE_LIBS} $(WX_LIB) -m32
+EXTRA_LIBS+= -shared ${ACE_LIBS} $(WX_LIB)
 
 LINKALL_ON=		-all
 LINKALL_OFF=		
