fixed the windows transient read-in code. . .also added interface/api to turn on/off bbox of volumeViz data. ..also modified the underlying graph of the volumeViz node to make switching between shaders easier

--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -508,6 +508,9 @@ echo Done
 				RelativePath="..\futuregen\Ve_ui\UI_TeacherTab.h">
 			</File>
 			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TextureBasedPanel.h">
+			</File>
+			<File
 				RelativePath="..\futuregen\Ve_ui\UI_TopFrame.h">
 			</File>
 			<File
