--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -666,6 +666,12 @@ echo Done.
 				RelativePath=".\cfdObjects.cxx">
 			</File>
 			<File
+				RelativePath=".\cfdOSGScalarShaderManager.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdOSGShaderManager.cxx">
+			</File>
+			<File
 				RelativePath="..\VE_SceneGraph\cfdPfSceneManagement.cxx">
 			</File>
 			<File
@@ -826,6 +832,9 @@ echo Done.
 			</File>
 			<File
 				RelativePath=".\cfdThread.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateableOSGNoiseTexture3d.cxx">
 			</File>
 			<File
 				RelativePath=".\cfdUpdateableOSGTexture1d.cxx">
@@ -1804,6 +1813,12 @@ echo Done.
 				RelativePath="cfdObjects.h">
 			</File>
 			<File
+				RelativePath=".\cfdOSGScalarShaderManager.h">
+			</File>
+			<File
+				RelativePath=".\cfdOSGShaderManager.h">
+			</File>
+			<File
 				RelativePath="..\VE_SceneGraph\cfdPfSceneManagement.h">
 			</File>
 			<File
@@ -1874,6 +1889,9 @@ echo Done.
 			</File>
 			<File
 				RelativePath=".\cfdTransientVizHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdUpdateableOSGNoiseTexture3d.h">
 			</File>
 			<File
 				RelativePath=".\cfdUpdateableOSGTexture1d.h">
